Updated-index.html

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <p class="subtitle">Choose a game and start playing</p>
 
     <div class="game-grid">
-      <a href="snake.html" class="Snake">Game 1</a>
-      <a href="tictactoe.html" class="TicTacToe">Game 2</a>
-      <a href="brickball.html" class="BrickBall">Game 3</a>
+      <a href="snake.html" class="game-card">Snake</a>
+      <a href="tictactoe.html" class="game-card">TicTacToe</a>
+      <a href="brickball.html" class="game-card">BrickBall</a>
     </div>
   </div>
 </body>
