--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <p class="subtitle">Choose a game and start playing</p>
 
     <div class="game-grid">
+      <a href="brickball.html" class="game-card">Brick Ball</a>
       <a href="snake.html" class="game-card">Snake</a>
-      <a href="tictactoe.html" class="game-card">TicTacToe</a>
-      <a href="brickball.html" class="game-card">BrickBall</a>
+      <a href="tictactoe.html" class="game-card">Tic Tac Toe</a>
+      <a href="towerofhanoi.html" class="game-card">Tower of Hanoi</a>
     </div>
   </div>
 </body>
