flappy-ball-and-paddle-pong

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <div class="game-grid">
       <a href="brickball.html" class="game-card">Brick Ball</a>
+      <a href="flappyball.html" class="game-card">Flappy Ball</a>
+      <a href="paddlepong.html" class="game-card">Paddle Pong</a>
       <a href="snake.html" class="game-card">Snake</a>
       <a href="tictactoe.html" class="game-card">Tic Tac Toe</a>
       <a href="towerofhanoi.html" class="game-card">Tower of Hanoi</a>
